For reset password to lansa and added the missing files

--- a/Partition (CDV)/Fields/LW3CRDVIS.fld.yml
+++ b/Partition (CDV)/Fields/LW3CRDVIS.fld.yml
@@ -3,7 +3,7 @@
   Type:               Alpha
   Length:             1
   Decimals:           0
-  Default Value:      "'N'"
+  Default Value:      "'Y'"
   Enabled For RDMLX:  No
   System Field:       No
 
@@ -23,7 +23,7 @@
     *
     Begin_Com Role(*EXTENDS #PRIM_OBJT)
     
-    Begin_Com Role(*Visual #PRIM_EVEF) Name(#VisualEdit) Defaultvisual(True) Height(19) Usepicklist(False) Width(178) Componentversion(1)
+    Begin_Com Role(*Visual #PRIM_EVEF) Name(#VisualEdit) Defaultvisual(True) Height(19) Usepicklist(False) Width(178)
     
     End_Com
     
