--- a/Partition (CDV)/Fields/LW3CUSVAL.fld.yml
+++ b/Partition (CDV)/Fields/LW3CUSVAL.fld.yml
@@ -1,7 +1,7 @@
 ﻿Field:
   Name:               LW3CUSVAL
   Type:               Alpha
-  Length:             30
+  Length:             50
   Decimals:           0
   Default Value:      "*BLANKS"
   Enabled For RDMLX:  No
@@ -18,3 +18,13 @@
       Heading1:           "Generated"
       Heading2:           "Customer"
       Heading3:           "Value"
+
+  Source: |
+    *
+    Begin_Com Role(*EXTENDS #PRIM_OBJT)
+    
+    Begin_Com Role(*Visual #PRIM_EVEF) Name(#VisualEdit) Defaultvisual(True) Usepicklist(False) Componentversion(1) Height(21) Width(643)
+    
+    End_Com
+    
+    End_Com
