--- a/Partition (CDV)/Files/LW3USRPRF.CDVDTALIB.file.yml
+++ b/Partition (CDV)/Files/LW3USRPRF.CDVDTALIB.file.yml
@@ -1,7 +1,7 @@
 ﻿File:
   Name:                           LW3USRPRF
   File Type:                      LANSA File
-  Library:                        CEVCENDTA
+  Library:                        CDVDTALIB
   Record Format Name:             LW3USRPRF
   Module Library:                 Same Library As File
   File Uses SQL on IBM i:         No
